data layer, implementing repository pattern for character request

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,7 @@ androidExtensions {
 
 dependencies {
     implementation project(":domain")
+    implementation project(":data")
 
     //Kotlin
     implementation kotlinLib
