--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,16 +46,13 @@ androidExtensions {
 dependencies {
     implementation project(":domain")
     implementation project(":data")
+    implementation project(":framework:imagemanager")
 
     //Kotlin
     implementation kotlinLib
 
     //KTX
     implementation ktxLib
-
-    //Glide
-    implementation glideLib
-    annotationProcessor glideCompiler
 
     //Gson
     implementation gsonLib
