--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,15 +47,13 @@ dependencies {
     implementation project(":domain")
     implementation project(":data")
     implementation project(":framework:imagemanager")
+    implementation project(":framework:databasemanager")
 
     //Kotlin
     implementation kotlinLib
 
     //KTX
     implementation ktxLib
-
-    //Gson
-    implementation gsonLib
 
     //Material
     implementation materialLib
@@ -64,11 +62,6 @@ dependencies {
     implementation okHttpInterceptorLib
     implementation retrofitRxJavaLib
     implementation retrofitGsonLib
-
-    //Room
-    api roomLib
-    kapt roomCompiler
-    implementation roomRxJavaLib
 
     implementation reactiveStreamsLib
 
