framework layer, request manager

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,7 @@ dependencies {
     implementation project(":data")
     implementation project(":framework:imagemanager")
     implementation project(":framework:databasemanager")
+    implementation project(":framework:requestmanager")
 
     //Kotlin
     implementation kotlinLib
@@ -57,11 +58,6 @@ dependencies {
 
     //Material
     implementation materialLib
-
-    //Retrofit
-    implementation okHttpInterceptorLib
-    implementation retrofitRxJavaLib
-    implementation retrofitGsonLib
 
     implementation reactiveStreamsLib
 
