--- a/framework/databasemanager/build.gradle
+++ b/framework/databasemanager/build.gradle
@@ -47,4 +47,7 @@ dependencies {
 
     implementation rxAndroidLib
     implementation rxJavaLib
+
+    implementation daggerLib
+    kapt daggerCompiler
 }
