--- a/data/build.gradle
+++ b/data/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.library'
     id 'kotlin-android'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -38,4 +39,7 @@ dependencies {
     implementation kotlinLib
 
     implementation rxJavaLib
+
+    implementation daggerLib
+    kapt daggerCompiler
 }
