--- a/framework/requestmanager/build.gradle
+++ b/framework/requestmanager/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.library'
     id 'kotlin-android'
     id 'kotlin-android-extensions'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -45,4 +46,7 @@ dependencies {
 
     implementation rxAndroidLib
     implementation rxJavaLib
+
+    implementation daggerLib
+    kapt daggerCompiler
 }
